--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "panditprogrammer",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "method-override": "^3.0.0",
     "sqlite3": "^5.1.7"
   }
