--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is blog website where an admin can Create, Edit, Delete and Published and Draft blog. And Reader can view and like and comment on blog. ",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "panditprogrammer",
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
